[package]
name = "bitcoin"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
ring = "0.16.20"
bincode = "1.2"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
log = "0.4"
stderrlog = "0.5.4"
mio = "0.8.5"
slab = "0.4"
mio-extras = "2.0"
serde_json = "1.0"
tiny_http = "0.12.0"
url = "2.1"
crossbeam = "0.8.2"
rand = "0.8.5"
hex-literal = "0.3.4"
clap = { version = "4.0.32", features = ["wrap_help"]}
net2 = "^0.2.36"

[features]
default = []
test-utilities = []
